welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:51: error: method growFlowers overrides nothing
override def growFlowers() {
             ^